system/network-policies/allow-app-books-ingress.yaml
# filepath: ClustOps/system/network-policies/allow-app-books-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-app-books-ingress
  namespace: mi-sistema
spec:
  podSelector:
    matchLabels:
      app: app-books # Esta regla es para los pods de app-books
  policyTypes:
  - Ingress # Se aplica al tráfico entrante
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: nginx # Solo permite tráfico desde pods con la etiqueta app:nginx
    ports:
    - protocol: TCP
      port: 5000 # Al puerto 5000 de los pods de app-books
